yaml_configs/frigate/04-frigate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  replicas: 0
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:stable
          resources:
            limits:
              kkohtaka.org/edgetpu: 1
          ports:
            - containerPort: 5000
              name: webui
            - containerPort: 8080
              name: web
            - containerPort: 1984
              name: go2rtc
            - containerPort: 8554
              name: rtsp-feeds
            - containerPort: 8555
              name: webrtc-tcp
              protocol: TCP
            - containerPort: 8555
              name: webrtc-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: config
            - mountPath: /media/frigate
              name: media-volume
              subPath: media
            - mountPath: /dev/shm
              name: dshm
            - name: vaapi
              mountPath: /dev/dri
              readOnly: true
 #           - mountPath: /dev/bus/usb
 #             name: dev-usb
          securityContext:
            privileged: true
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: frigate-config-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: frigate-media-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 100Mi
        - name: vaapi
          hostPath:
            path: /dev/dri

#        - name: dev-usb
#          hostPath:
#            path: /sys/bus/usb/devices/2-1
